// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css macro composes 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro composes with objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: block;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.glamor-0:hover {
  color: blue;
}

.glamor-0:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .glamor-0 {
    color: green;
  }
}

<div
  className="glamor-0"
/>
`;

exports[`css macro composes with undefined values 1`] = `
.glamor-0 {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  background: white;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border: solid 1px red;
}

<div
  className="glamor-0"
/>
`;

exports[`css macro handles objects 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
/>
`;
